# FluxEngine

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
Engine/: CMakeLists.txt
Engine/src/: engine.h  main.cpp
Engine/src/renderer/: renderer.hpp
Engine/src/shaders/: shaders.h
Engine/src/texture/: texture.cpp  texture.hpp
Engine/src/window/: window.cpp  window.hpp
EngineFileCompiller/: main.py
FluxEngine/: flux_engine.h  main.cpp
FluxEngine/Camera/: camera.h
FluxEngine/Light/: light.h
FluxEngine/Loader/: loader.hpp
FluxEngine/Map/: map.hpp
FluxEngine/Math/: math.h
FluxEngine/Matrix/: matrix.h
FluxEngine/Objects/: object.hpp
FluxEngine/Render/: render.cpp
FluxEngine/Scene/: scene.hpp
FluxEngine/Shader/: shaders.h
FluxEngine/Sprite/: sprite.h
FluxEngine/Texture/: texture.cpp  texture.hpp
FluxEngine/Vector/: vec.h
FluxEngine/Window/: window.cpp  window.hpp
core/: main.cpp
core/window/: VEngine triangle shader  window triangle shader.cpp  window.cpp  window.hpp
src/: engine.h  main.cpp  main.rs
src/engine/: mod.rs
src/filestructure/: files.cpp  files.hpp
src/objects/: objects.hpp
src/renderer/: renderer.hpp
src/texture/: texture.cpp  texture.hpp
src/window/: window.cpp  window.hpp
